--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
           <li class="active"><a href="terms.html">Terms and conditions</a></li>
           <li class="active"><a href="return.html">Return and refund policy</a></li>
           <li class="active"><a href="privacy.html">Privacy policy</a></li>
+          <li class="active"><a href="shipping.html">Shipping policy</a></li>
           <li><a href="#why-us">Pricing</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
       </nav><!-- .main-nav -->
       
@@ -482,14 +483,14 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-contact">
+          <div class="col-lg-3 col-md-6 footer-contact" id="contact">
             <h4>Contact Us</h4>
             <p>
               KHALILUR RAHMAN, <br>
               MOYNABANDHA, DHUBRI-783135<br>
               ASSAM INDIA<br>
               <strong>Phone:</strong>(+91) 9394157976<br>
-              <strong>Email:</strong> support@racetosafety.in<br>race2safety@gmail.com
+              <strong>Email:</strong> zplus127514@gmail.com <br> merabow00@gmail.com</br>
             </p>
 
             <div class="social-links">
