--- a/terms.html
+++ b/terms.html
@@ -23,30 +23,13 @@
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-
-  <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-    Theme Name: NewBiz
-    Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
-
-  <!--==========================
-  Header
-  ============================-->
   <header id="header" class="fixed-top">
     <div class="container">
-
       <div class="logo float-left">
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <h1 class="text-light"><a href="#header"><span>NewBiz</span></a></h1> -->
-        <!-- <a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
         <h1>Zplus</h1>
         <p class="text-sm" style="font-size: 12px;">Powered by merabowllp</p>
       </div>
@@ -57,12 +40,13 @@
           <li class="active"><a href="terms.html">Terms and conditions</a></li>
           <li class="active"><a href="return.html">Return and refund policy</a></li>
           <li class="active"><a href="privacy.html">Privacy policy</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li class="active"><a href="shipping.html">Shipping policy</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
         </ul>
-      </nav><!-- .main-nav -->
+      </nav>
       
     </div>
-  </header><!-- #header -->
+  </header>
 
 
 
@@ -243,24 +227,23 @@
             <p>Powered by merabowllp</p>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+        <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#">About us</a></li>
-              <li><a href="terms.html">Terms of service</a></li>
-              <li><a href="privacy.html">Privacy policy</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="terms.html">Terms of service</a></li>
+            <li><a href="privacy.html">Privacy policy</a></li>
             </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-contact">
+        </div>
+        <div class="col-lg-3 col-md-6 footer-contact" id="contact">
             <h4>Contact Us</h4>
             <p>
-              KHALILUR RAHMAN, <br>
-              MOYNABANDHA, DHUBRI-783135<br>
-              ASSAM INDIA<br>
-              <strong>Phone:</strong>(+91) 9394157976<br>
-              <strong>Email:</strong> support@racetosafety.in<br>race2safety@gmail.com
+            KHALILUR RAHMAN, <br>
+            MOYNABANDHA, DHUBRI-783135<br>
+            ASSAM INDIA<br>
+            <strong>Phone:</strong>(+91) 9394157976<br>
+            <strong>Email:</strong> zplus127514@gmail.com <br> merabow00@gmail.com</br>
             </p>
 
             <div class="social-links">
